# py_in_rpkg

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  pyproject.toml
.github/workflows/: R-CMD-check.yaml
R/: adder_wrap.R  multipython_wrap.R  outside_wrap.R  pdsummary_wrap.R  zzz.R
inst/python/: adder.py  multi2.py  multipython.py  pdsummary.py
man/: adder_wrap.Rd  pdsummary_wrap.Rd  wrap_divide.Rd  wrap_mean.Rd  wrap_min.Rd  wrap_minus.Rd  wrap_select.Rd  wrap_sum.Rd  wrap_var.Rd
tests/: testthat.R
tests/testthat/: test-adder_wrap.R  test-multipython_wrap.R
